@@ -9,9 +9,11 @@ AUX glib-2.8.3-macos.patch 307 RMD160 f9212f17245cec6767cc1f0447e461c6e4917a6c S
 DIST glib-1.2.10-r1-as-needed.patch.bz2 9099 RMD160 5b7a21da6dc10112409bd885501a6976a2eb894d SHA1 468a7947b7d1688c2e7d61da80d40ca59422fbec SHA256 3bb8c45706f97b526da851061c89618bc258fa61f9100802c1340548e4bb2731
 DIST glib-1.2.10.tar.gz 421480 RMD160 f19efe8c87ebeea979a4d36902d8a8209640cd95 SHA1 e5a9361c594608d152d5d9650154c2e3260b87fa SHA256 6e1ce7eedae713b11db82f11434d455d8a1379f783a79812cd2e05fc024a8d9f
 DIST glib-2.12.11.tar.bz2 2925342 RMD160 8680d27e630643e6653d88537907d06e3ba6e91a SHA1 02d344295ddaeafeec6bc6824b71e12bbf1b0394 SHA256 706aa9da1c096af8d27b3ddb5da4e321dd6b10f881887639e280e4e10b81c4b3
+DIST glib-2.12.12.tar.bz2 2938743 RMD160 bab462a1e4ef3e9905a4af5b727ad4f9ca03cf02 SHA1 527bced2e6d38169c08c8712d5e3b6ebb0dc46b5 SHA256 debc507172093ef7c74e8a83bf49e090cc24057b1807d3be22e5d7cbfab60054
 DIST glib-2.12.9.tar.bz2 2902738 RMD160 f762b65131f5c1f30ee2e25cb771c296715e6bd6 SHA1 387da30929047ef88a6f369831a34f41a3d027f7 SHA256 10113e7b91f858557c7edb4b611cc009855c5ff8663af54977a65acb69445058
 EBUILD glib-1.2.10-r5.ebuild 1692 RMD160 1996eb13253d95cd9d2536ce6b270b545b72cfa3 SHA1 474f6e09ee4d2e86cc5f353c10a5acdf467cb990 SHA256 7c581cab047ffc136a98aedc3fa79cc145e52b8d9ecfafb9fa25e3c26016987d
 EBUILD glib-2.12.11.ebuild 2408 RMD160 7c20ec0238073d336cf3925d24007d1955ec2705 SHA1 21c20820b04420349f961dbdff1d975dbb41d94b SHA256 eb38e1547d67e088b8a6284372370aba8e58638db565cd547cb4f0df91232b58
+EBUILD glib-2.12.12.ebuild 2460 RMD160 16d0c0954a03c2090e583b091a964a88ee929a2c SHA1 19e15c555b188e7591069ef058a4b5f83c97aa15 SHA256 eba7a8d35888876e410f2a83c285a5574840d3bd14a31f64bcbf7dca97030415
 EBUILD glib-2.12.9.ebuild 2278 RMD160 71666d01b0959f83ea4ea8eb85b3c6ce272774da SHA1 f81f6d00823ee69ffe760e8ccd070af441303c6d SHA256 2e11140da0caeb54baeaecccbc140f81815ee103c7c4d08a36dfdf0bcf048cab
-MISC ChangeLog 31596 RMD160 6fe53287888facbca47fed1ba780eeba6dfb8b90 SHA1 2704ebfe8cc44bc0e86e7f60c5b7d122f5240a4e SHA256 27096ccfbf3097b360d32188605f23eb2024cf7a91e66fb4d557a7caa70f7200
+MISC ChangeLog 31829 RMD160 2e016b44ef8ea1311a14b251a31255a02dd18cde SHA1 f77b176bf650c459e640f98d48655aa75b8f5ef3 SHA256 ef811f13219e1c5a80c45dd1b742fc87bd9885605519e57578ab5e3aeb35e779
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
