@@ -1,8 +1,16 @@
 # ChangeLog for dev-libs/glib
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/ChangeLog,v 1.264 2007/06/02 05:17:07 leio Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/ChangeLog,v 1.266 2007/06/05 19:06:25 dang Exp $
 
-  02 Jun 2007; <leio@gentoo.org> -files/glib-2.12.4-gtimer-fix.patch,
+  05 Jun 2007; Daniel Gryniewicz <dang@gentoo.org> glib-2.12.12.ebuild:
+  Add back elibtoolize for fbsd
+
+*glib-2.12.12 (05 Jun 2007)
+
+  05 Jun 2007; Mart Raudsepp <leio@gentoo.org> +glib-2.12.12.ebuild:
+  Version bump
+
+  02 Jun 2007; Mart Raudsepp <leio@gentoo.org> -files/glib-2.12.4-gtimer-fix.patch,
   -files/glib-2.12.4-tests_pthread.patch, -files/glib-2-macos.patch,
   -glib-2.12.4-r1.ebuild, -glib-2.12.6.ebuild, -glib-2.12.7.ebuild:
   Remove redundant versions
